Implement current-dependents.json endpoint
